# OPC200

./: .bandit.yml  .coveragerc  .dockerignore  .env.minimal  .gitignore  .pre-commit-config.yaml  .secrets-exclude-patterns  .secrets.baseline  AUDIT_REPORT.md  CHANGELOG.md  COLLABORATION.md  CONTRIBUTING.md  CRITICAL_ANALYSIS_2026-04-10.md  DEPLOYMENT_CHECKLIST_200_OPC.md  DEVELOPMENT_PLAN.md  DOCUMENT_CONSISTENCY_AUDIT.md  Dockerfile  Dockerfile.allinone  Dockerfile.gateway  Dockerfile.journal  Dockerfile.light  Dockerfile.prod  Dockerfile.quick  Dockerfile.test  EXECUTIVE_SUMMARY.md  GITHUB_RULES_SETUP.md  GITHUB_SETTINGS_GUIDE.md  INSTALL_ISSUES.md  KNOWLEDGE_BASE.md  MODIFICATIONS.md  Makefile  PROJECT_STATUS.md  PR_MERGE_CHECKLIST.md  README.md  REFACTOR_PLAN.md  RESTRUCTURE_REPORT.md  SIMULATION_QUICKSTART.md  SKILLS_ASSESSMENT_REPORT.md  STRUCTURE.md  SYSTEM.md  (+18 more)
.cursor/agents/: debugger.md  test-runner.md  verifier.md
.cursor/rules/: commit.mdc  execution-gate-by-user-confirmation.mdc  git-management.mdc  openclaw-installer-eap.mdc  report.mdc  unit-test-required.mdc  work-objectives.mdc  work-progress.mdc
.github/: CODEOWNERS  pull_request_template.md  pull_request_template_tdd.md
.github/scripts/: check_commit_msg.py
.github/workflows/: auto-assign-reviewers.yml  branch-naming.yml  ci.yml  commitlint.yml  deploy-production.yml  deploy-staging.yml  local-build-openclaw-win.yml  ops-scripts-ci.yml  permission-check.yml  publish-skills.yml  release-opc-agent.yml  security-audit.yml  skills-test.yml  validation-pipeline.yml
agent/: Dockerfile.exporter  README.md  docker-compose.minimal.yml
agent/config/: gateway-secure.yml  gateway.yml  opc.conf.example  security.yml  skills.yml
agent/scripts/: LOCAL_TEST_GUIDE.md  TEST_PLAN.md  build-agent-bundle.sh  build-linux.sh  build-openclaw-installer-exe.ps1  build-openclaw-installer-win-release-local.ps1  build-openclaw-uninstaller-exe.ps1  build-windows-exe.ps1  fetch-openclaw-npm-cache.ps1  install.ps1  install.sh  opc200-install.ps1  opc200-install.sh  openclaw-installer.ps1  openclaw-installer.sh  openclaw-uninstaller.ps1  pack-agent-release.ps1  pack-openclaw-installer-release.ps1  requirements-agent-binary.txt  requirements-agent-runtime-full.txt  requirements-agent-runtime.txt  run-local-tests.sh  uninstall.ps1  uninstall.sh
agent/skills/: __init__.py
agent/src/: __init__.py  exceptions.py
config/: gateway-secure.yml  skills.yml  supervisord.onprem.conf  tailscale.yml
customers/_template/: README.md
docs/: 5_INSTANCES_CHEATSHEET.md  API.md  ARCHITECTURE_OPENCLOW_GITHUB.md  CHANGELOG.md  CHINA_DEPLOYMENT.md  CRITICAL_ANALYSIS.md  DEPLOYMENT.md  DEPLOYMENT_5_INSTANCES.md  DEPLOYMENT_5_INSTANCES_UPDATE.md  DEVELOPMENT.md  FULL_MONITORING_DEPLOYMENT_REPORT.md  FULL_TEST_STRATEGY.md  GITHUB_TECHNICAL_ANALYSIS.md  INSTALL_SCRIPT_SPEC.md  LOCAL_DEPLOYMENT_GUIDE.md  METRICS_PROTOCOL.md  MONITORING.md  NEW_MACHINE_DEPLOYMENT.md  NEW_MACHINE_QUICK.md  P1_ALERT_VERIFICATION_REPORT.md  PREINSTALLED_LOBSTER_ROADMAP.md  QUICKSTART.md  RESEARCH_COMPETITIVE_ANALYSIS.md  SCRIPTS.md  SECURITY.md  SIMULATION_ARCHITECTURE.md  SINGLE_DEPLOYMENT.md  SLA.md  TASK_BOARD.md  TDD_EXAMPLE.py  TDD_GUIDE.md  USER_MANUAL.md  VALIDATION_PIPELINE.md
docs/architecture/: DIRECTORY_MIGRATION.md  PREINSTALLED_LOBSTER_ROADMAP.md  USER_INSTALL_RUNBOOK.md
docs/archive/: phase-1-mvp.md
docs/plans/: openclaw-windows-offline-install.md
examples/: customer-config-example.yml  journal-entry-example.yml  milestone-definition-example.yml
fixes/: PROGRESS.md
monitoring/grafana/: datasources.cloud.yml
monitoring/prometheus/: alerts.yml  prometheus.cloud.yml  prometheus.yml
platform/: README.md  docker-compose.yml  install.sh
platform/alertmanager/: alertmanager.yml
platform/prometheus/: prometheus.yml
platform/scripts/: feishu_alert_adapter.py  mock_agent_data.py  mock_agent_fixed.py  simulate_agent.py
platform/tests/: test_plat001_infrastructure.py  test_plat002_grafana_dashboard.py  test_plat003_metrics_protocol.py  test_plat004_multi_tenant.py  test_plat006_alertmanager.py
scripts/: generate_skill_report.py  install-cloud.sh  install-local.sh  nightly-security-audit.sh  run_all_tests.sh  security-scan.py  simulation-quickstart.sh  tdd.sh  validate_minimal_deploy.py
scripts/deploy/: batch-deploy.sh  deploy-cloud.sh  deploy-onprem.sh  install-skills.sh
scripts/dev/: e2e_push_test.py
scripts/lib/: config.sh  logging.sh  (+1 more)
shared/: README.md
skills/: README.md
skills/opc-remi-lite/: Makefile  README.md  SKILL.md  bandit-report.json  pyproject.toml
skills/opc-remi-lite/remi_lite/: backup.py  heartbeat.py  session.py
src/: __init__.py
tests/: __init__.py  conftest.py
(+203 files in other folders)
